# ansible_playground

./: Dockerfile  README.md  ansible.cfg  docker-compose.yml  pyproject.toml
anisble/: inventory.yml
ansible/: first_playbook.yaml
ansible/inventories/: local.yaml
docker/: Dockerfile  docker-compose.yml
